fix pill overflow

--- a/styles/actor-sheet-header.scss
+++ b/styles/actor-sheet-header.scss
@@ -40,7 +40,7 @@
       // text-transform: uppercase;
       height: 40px;
       line-height: 48px;
-      margin: 10px 0;
+      margin: 10px 5px;
       text-shadow: 2px 2px 2px var(--zx-clr-fg4);
       width: 96%;
     }
