--- a/styles/item-sheet.scss
+++ b/styles/item-sheet.scss
@@ -153,7 +153,7 @@
         }
         div.array-input-pills {
           flex: 0 0 100%;
-          height: 16px;
+          //height: 16px;
           padding: 0 3px;
           span {
             background-color: var(--zx-clr-aqua);
